--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "apollo-datasource-rest": "^0.9.2",
     "apollo-server": "^2.15.0",
     "apollo-server-testing": "^2.15.0",
+    "dotenv": "^8.2.0",
     "graphql": "^15.1.0",
     "isemail": "^3.2.0",
     "nodemon": "^2.0.4",
